# marifah

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  phase0.yaml  phase1.yaml  smoke.yaml  smoke_hmsc_off.yaml  warmstart_cold.yaml  warmstart_warm.yaml
docs/: Marifah_Naming_and_Taxonomy.md
docs/architecture/: Aktuator_Game_Plan_2026-05.md  CORAL_Build_Plan_2026-05.md  CORAL_DAG_Codebook_Design.md  CORAL_Synthetic_DAG_Benchmark_Spec.md
docs/operations/: container_image.md  session06_runbook.md
scripts/: check_act_iteration.py  check_deps.py  delta_probe.py  delta_probe_act.py  shuffled_probe.py  shuffled_probe_act.py  verify_pipeline_e2e.py  warmstart_probe.py
src/marifah/: __init__.py
tests/: test_adapter_attention_layer.py  test_adapter_attention_mask.py  test_adapter_collate.py  test_adapter_dataset.py  test_adapter_e2e.py  test_adapter_positional.py  test_adapter_tokenizer.py  test_checkpointing.py  test_configs.py  test_dtype_propagation.py  test_hmsc_auxiliary_heads.py  test_hmsc_composition.py  test_hmsc_e2e.py  test_hmsc_global.py  test_hmsc_perposition.py  test_hmsc_regional.py  test_smoke.py  test_substrate_probes.py  test_substrate_probes_act.py  test_synthetic_executor.py  test_synthetic_generator.py  test_synthetic_generator_performance.py  test_synthetic_patterns.py  test_synthetic_primitives.py  test_synthetic_workflows.py  test_training_checkpointing.py  test_training_data_pipeline.py  test_training_eval_loop.py  test_training_logging.py  test_training_losses.py  test_warmstart_probe.py
(+65 files in other folders)
