[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marifah"
version = "0.1.0"
description = "marifah-core — CORAL architecture for graph DAG execution"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4,<2.7",
    "numpy>=1.24",
    "adam-atan2>=0.0.3",
    "adam-atan2-pytorch>=0.3.2",
    "pydantic>=2.0",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.16",
    "tqdm>=4.0",
    "einops>=0.7",
    "coolname>=2.2",
    "argdantic>=0.5",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
# Pin tied to torch 2.6 ABI — update when migrating to torch 2.7+.
flash-attn = [
    "flash-attn==2.7.4.post1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["marifah*"]
